<resources>
    <string name="app_name">Contact</string>
    <string name="phone">手机号</string>
    <string name="name">姓名</string>
    <string name="add_contact">增加联系人</string>
    <string name="delete_contact">删除联系人</string>
    <string name="mofidy_contact">修改联系人</string>
    <string name="search_contact">查询联系人</string>
    <string name="address">地址</string>
    <string name="email">邮箱</string>
    <array name="a" >

    </array>
</resources>
